--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "9-readme-generator",
+  "name": "static-site",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mohamedisaaq0/9-readme-generator.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mohamedisaaq0/9-readme-generator/issues"
-  },
-  "homepage": "https://github.com/mohamedisaaq0/9-readme-generator#readme"
+  "dependencies": {
+    "inquirer": "^6.3.1"
+  }
 }
